Fix for alignment in Datanavigator of navigation type Pager.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1262,6 +1262,9 @@ If the height and width are not specified the video takes the height of the post
       border-left: 0;
     }
   }
+  ul.pager {
+    display: inline-block;
+  }
   ul.pagination {
     &.basic {
       > li {
@@ -1298,16 +1301,16 @@ If the height and width are not specified the video takes the height of the post
         }
       }
       .pagination-prev a:before {
-        content: "\f143";
+        content: "\f1d1";
       }
       .pagination-next a:before {
-        content: "\f145";
+        content: "\f1d2";
       }
       .pagination-first a:before {
-        content: "\f134";
+        content: "\f288";
       }
       .pagination-last a:before {
-        content: "\f135";
+        content: "\f322";
       }
     }
     &.active {
